Login, Register pages are created. And checking that the password match functionality is also added.

--- a/views/login.pug
+++ b/views/login.pug
@@ -4,9 +4,9 @@ block content
     .loginContainer 
         h1 Login 
         form(method="post") 
-            input(type="text", name="logUsername", placeholder="Enter Your Username/email", required="")
+            input(type="text", name="logUsername", placeholder="Enter Your Username or Email", required="")
             input(type="password", name="logPassword", placeholder="Enter Your Password", required="")
-            input(type="button", value="Login")
+            input(type="submit", value="Login")
         p Need an account? 
             a(href="/register") Register here.  
 
