--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,8 @@ block content
     .loginContainer 
         h1 Login 
         form(method="post") 
-            input(type="text", name="logUsername", placeholder="Enter Your Username or Email", required="")
+            p.errorMessage #{errorMessage}
+            input(type="text", name="logUsername", placeholder="Enter Your Username or Email", value=logUserName required="")
             input(type="password", name="logPassword", placeholder="Enter Your Password", required="")
             input(type="submit", value="Login")
         p Need an account? 
