--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -7,9 +7,31 @@ html(lang="en")
         title #{pageTitle}
 
         link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')
+        link(rel='stylesheet', href='/css/main.css')
+    body
+        .wrapper
+            .row 
+                nav.col-2
+                    a.logo(href="/")
+                        i.fas.fa-dove *
+                    a(href="/")
+                        i.fas.fa-home *
+                    a(href="/search")
+                        i.fas.fa-search *
+                    a(href="/notifications")
+                        i.fas.fa-bell *
+                    a(href="/messages")
+                        i.fas.fa-envelope *
+                    a(href="/profile")
+                        i.fas.fa-user *
+                    a(href="/logout")
+                        i.fas.fa-sign-out-alt *
+                .mainSectionContainer.col-10.col-md-8.col-lg-6
+                   block content 
+                .d-none.d-md-block.col-md-2.col-lg-4
+                    span third column 
 
-    body 
-        block content
+        
 
         script(src='https://code.jquery.com/jquery-3.5.1.min.js', integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
