--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,8 @@
 :root{
-    --green:#1fa320;
-    --buttonHover:#13da5f;
+    --blue:#4568dc;
+    --buttonHover:linear-gradient(90deg,#4568dc,#b06ab3);
+    --grey:rgba(230,236,240);
+    --spacing:15px;
 }
 
 a{
@@ -9,6 +11,11 @@ a{
 a:hover{
     color: inherit;
     text-decoration: none;
+}
+h1{
+    font-size: 19px;
+    font-weight: 800;
+    margin: 0;
 }
 
 nav{
@@ -29,14 +36,30 @@ nav a{
 }
 
 nav a.logo{
-    color:var(--green);
+    color:var(--blue)
 }
 nav a:hover{
-    background-color: var(--buttonHover);
-    color: var(--green);
+    background-image: var(--buttonHover);
+    color: white;
     border-radius: 50%;
 }
 
 .mainSectionContainer{
-    background-color: aquamarine;
+    padding: 0;
+    border-left: 1px solid var(--grey);
+    border-right: 1px solid var(--grey);
+    display: flex;
+    flex-direction: column;
+}
+
+.titleContainer{
+    height: 53px;
+    padding: 0 var(--spacing);
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid var(--grey);
+    flex-shrink: 0;
+}
+.titleContainer h1{
+    flex: 1;
 }
