--- a/views/home.pug
+++ b/views/home.pug
@@ -1,5 +1,5 @@
 extends layouts/main-layout.pug
 
 block content 
-    h1 Home page
-    p #{userLoggedIn.firstName}
+    +createPostForm(userLoggedIn)
+    
