--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -1,3 +1,4 @@
+include ../mixins/mixins.pug 
 doctype html
 html(lang="en")
     head
@@ -8,31 +9,34 @@ html(lang="en")
 
         link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css', integrity='sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh', crossorigin='anonymous')
         link(rel='stylesheet', href='/css/main.css')
+        link(rel='icon' href='/images/logo-title.png' type='image/icon type')
     body
         .wrapper
             .row 
                 nav.col-2
                     a.logo(href="/")
-                        i.fas.fa-dove *
+                        i.fas.fa-book-open
                     a(href="/")
-                        i.fas.fa-home *
+                        i.fas.fa-home
                     a(href="/search")
-                        i.fas.fa-search *
+                        i.fas.fa-search
                     a(href="/notifications")
-                        i.fas.fa-bell *
+                        i.fas.fa-bell
                     a(href="/messages")
-                        i.fas.fa-envelope *
+                        i.fas.fa-envelope
                     a(href="/profile")
-                        i.fas.fa-user *
+                        i.fas.fa-user
                     a(href="/logout")
-                        i.fas.fa-sign-out-alt *
+                        i.fas.fa-sign-out-alt
                 .mainSectionContainer.col-10.col-md-8.col-lg-6
-                   block content 
+                    .titleContainer 
+                        h1 #{pageTitle}
+                    block content 
                 .d-none.d-md-block.col-md-2.col-lg-4
                     span third column 
 
         
-
+        script(src='https://kit.fontawesome.com/85404227e2.js' crossorigin='anonymous')
         script(src='https://code.jquery.com/jquery-3.5.1.min.js', integrity='sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=', crossorigin='anonymous')
         script(src='https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js', integrity='sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo', crossorigin='anonymous')
         script(src='https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js', integrity='sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6', crossorigin='anonymous')
