--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,8 +1,12 @@
 :root{
     --blue:#4568dc;
     --buttonHover:linear-gradient(90deg,#4568dc,#b06ab3);
+    --buttonLight:linear-gradient(90deg,#94aaf1,#e7c1e7);
     --grey:rgba(230,236,240);
     --spacing:15px;
+}
+*{
+    outline: none !important;
 }
 
 a{
@@ -62,4 +66,42 @@ nav a:hover{
 }
 .titleContainer h1{
     flex: 1;
+}
+.postFormContainer{
+    display: flex;
+    padding: var(--spacing);
+    border-bottom: 10px solid var(--grey);
+    flex-shrink: 0; 
+}
+.userImageContainer{
+    width: 50px;
+    height: 50px;
+}
+.userImageContainer img{
+    width:100%;
+    border-radius: 50%;
+    background-color: white;
+} 
+.textareaContainer{
+    flex: 1;
+    padding-left: var(--spacing);
+}
+.textareaContainer textarea{
+    width: 100%;
+    border: none;
+    resize: none;
+    font-size: 19px;
+}
+
+#submitPostButton {
+    background-image: var(--buttonHover);
+    color: white;
+    border: none;
+    border-radius: 40px;
+    padding: 7px 15px;
+}
+
+#submitPostButton:disabled {
+    /* background: green; */
+    background: var(--buttonLight);
 }
