--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,8 @@
     --buttonHover:linear-gradient(90deg,#4568dc,#b06ab3);
     --buttonLight:linear-gradient(90deg,#94aaf1,#e7c1e7);
     --grey:rgba(230,236,240);
+    --greyText:rgb(101,119,134);
+    --greyButtonText:rgba(0, 0, 0, 0.34);
     --spacing:15px;
 }
 *{
@@ -23,6 +25,7 @@ h1{
 }
 
 nav{
+    margin-top: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
@@ -48,6 +51,11 @@ nav a:hover{
     border-radius: 50%;
 }
 
+button{
+    background-color: transparent;
+    border: none;
+    color: var(--greyButtonText);
+}
 .mainSectionContainer{
     padding: 0;
     border-left: 1px solid var(--grey);
@@ -103,4 +111,52 @@ nav a:hover{
 
 #submitPostButton:disabled {
     background: var(--buttonLight);
+}
+.post{
+    display: flex;
+    flex-direction: column;
+    padding: var(--spacing);
+    cursor: pointer;
+    border-bottom: 1px solid var(--grey);
+    flex-shrink: 0;
+} 
+ .mainContentContainer{
+    flex: 1;
+    display: flex;
+}
+.postContentContainer{
+    padding-left: var(--spacing);
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+}
+.username, .date{
+    color: var(--greyText);
+}
+.verified {
+    width: 15px;
+    height: 15px;
+}
+.displayName{
+    font-weight: bold;
+}
+.postFooter{
+    display: flex;
+    align-items: center;  
+}
+.postFooter .postButtonContainer{
+    flex: 1;
+    display: flex;
+
+}
+.postFooter .postButtonContainer button{
+  padding: 2px 5px;
+}
+.header a:hover{
+    text-decoration: underline;
+}
+.postButtonContainer button:hover{
+    background-color: #d4edff;
+    color: var(--blue);
+    border-radius: 50%;
 }
