--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@
     --greyText:rgb(101,119,134);
     --greyButtonText:rgba(0, 0, 0, 0.34);
     --spacing:15px;
+    --red:rgb(226,34,94);
 }
 *{
     outline: none !important;
@@ -55,6 +56,11 @@ button{
     background-color: transparent;
     border: none;
     color: var(--greyButtonText);
+}
+
+button i,
+button span{
+    pointer-events: none;
 }
 .mainSectionContainer{
     padding: 0;
@@ -159,4 +165,8 @@ button{
     background-color: #d4edff;
     color: var(--blue);
     border-radius: 50%;
+}
+
+.postButtonContainer.red button.active{
+  color: var(--red);
 }
