--- a/views/layouts/main-layout.pug
+++ b/views/layouts/main-layout.pug
@@ -11,6 +11,8 @@ html(lang="en")
         link(rel='stylesheet', href='/css/main.css')
         link(rel='icon' href='/images/logo-title.png' type='image/icon type')
     body
+        script.
+            var userLoggedIn = !{userLoggedInJs};
         .wrapper
             .row 
                 nav.col-2
