--- a/public/css/main.css
+++ b/public/css/main.css
@@ -90,6 +90,11 @@ button span{
     border-bottom: 10px solid var(--grey);
     flex-shrink: 0; 
 }
+.modal .postFormContainer{
+ border: none;
+ padding: 0;
+ padding-top: var(--spacing);
+}
 .userImageContainer{
     width: 50px;
     height: 50px;
