--- a/views/home.pug
+++ b/views/home.pug
@@ -4,5 +4,6 @@ block content
     +createPostForm(userLoggedIn)
     .postsContainer
 
+    +createReplyModal(userLoggedIn)
 block scripts 
     script(src="/js/home.js") 
