--- a/public/css/main.css
+++ b/public/css/main.css
@@ -95,6 +95,9 @@ button span{
  padding: 0;
  padding-top: var(--spacing);
 }
+.modal .post{
+    padding: 0 0 var(--spacing) 0;
+}
 .userImageContainer{
     width: 50px;
     height: 50px;
