reply part is completed

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -202,3 +202,9 @@ button span{
     color: var(--greyText);
     margin-bottom: var(--spacing);
 }
+.replyFlag{
+    margin-bottom: 5px;
+}
+.replyFlag a{
+    color: var(--blue);
+}
