--- a/public/css/main.css
+++ b/public/css/main.css
@@ -208,3 +208,7 @@ button span{
 .replyFlag a{
     color: var(--blue);
 }
+.post.largeFont .postBody,
+.post.largeFont .postFooter{
+    font-size: 23px;
+}
