--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,214 +1,320 @@
-:root{
-    --blue:#4568dc;
-    --buttonHover:linear-gradient(90deg,#4568dc,#b06ab3);
-    --buttonLight:linear-gradient(90deg,#94aaf1,#e7c1e7);
-    --grey:rgba(230,236,240);
-    --greyText:rgb(101,119,134);
-    --greyButtonText:rgba(0, 0, 0, 0.34);
-    --spacing:15px;
-    --red:rgb(226,34,94);
-    --redBackground:rgba(226,34,94,0.1);
-    --green:rgb(23,191,99);
-    --greenBackground:rgba(23,191,99,0.1);
+:root {
+  --blue: #4568dc;
+  --buttonHover: linear-gradient(90deg, #4568dc, #b06ab3);
+  --buttonLight: linear-gradient(90deg, #94aaf1, #e7c1e7);
+  --grey: rgba(230, 236, 240);
+  --greyText: rgb(101, 119, 134);
+  --greyButtonText: rgba(0, 0, 0, 0.34);
+  --spacing: 15px;
+  --red: rgb(226, 34, 94);
+  --redBackground: rgba(226, 34, 94, 0.1);
+  --green: rgb(23, 191, 99);
+  --greenBackground: rgba(23, 191, 99, 0.1);
 }
-*{
-    outline: none !important;
-}
-
-a{
-    color: inherit;
-}
-a:hover{
-    color: inherit;
-    text-decoration: none;
-}
-h1{
-    font-size: 19px;
-    font-weight: 800;
-    margin: 0;
+* {
+  outline: none !important;
 }
 
-nav{
-    margin-top: 10px;
- display: flex;
- flex-direction: column;
- align-items: flex-end;
- height: 100%;
+a {
+  color: inherit;
+}
+a:hover {
+  color: inherit;
+  text-decoration: none;
+}
+h1 {
+  font-size: 19px;
+  font-weight: 800;
+  margin: 0;
 }
 
-nav a{
-    padding: 10px;
-    font-size: 30px;
-    width: 55px;
-    height: 55px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+nav {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  height: 100%;
 }
 
-nav a.logo{
-    color:var(--blue)
-}
-nav a:hover{
-    background-image: var(--buttonHover);
-    color: white;
-    border-radius: 50%;
+nav a {
+  padding: 10px;
+  font-size: 30px;
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-button{
-    background-color: transparent;
-    border: none;
-    color: var(--greyButtonText);
+nav a.logo {
+  color: var(--blue);
+}
+nav a:hover {
+  background-image: var(--buttonHover);
+  color: white;
+  border-radius: 50%;
+}
+
+button {
+  background-color: transparent;
+  border: none;
+  color: var(--greyButtonText);
 }
 
 button i,
-button span{
-    pointer-events: none;
+button span {
+  pointer-events: none;
 }
-.mainSectionContainer{
-    padding: 0;
-    border-left: 1px solid var(--grey);
-    border-right: 1px solid var(--grey);
-    display: flex;
-    flex-direction: column;
+.mainSectionContainer {
+  padding: 0;
+  border-left: 1px solid var(--grey);
+  border-right: 1px solid var(--grey);
+  display: flex;
+  flex-direction: column;
 }
 
-.titleContainer{
-    height: 53px;
-    padding: 0 var(--spacing);
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid var(--grey);
-    flex-shrink: 0;
+.titleContainer {
+  height: 53px;
+  padding: 0 var(--spacing);
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid var(--grey);
+  flex-shrink: 0;
 }
-.titleContainer h1{
-    flex: 1;
+.titleContainer h1 {
+  flex: 1;
 }
-.postFormContainer{
-    display: flex;
-    padding: var(--spacing);
-    border-bottom: 10px solid var(--grey);
-    flex-shrink: 0; 
+.postFormContainer {
+  display: flex;
+  padding: var(--spacing);
+  border-bottom: 10px solid var(--grey);
+  flex-shrink: 0;
 }
-.modal .postFormContainer{
- border: none;
- padding: 0;
- padding-top: var(--spacing);
+.modal .postFormContainer {
+  border: none;
+  padding: 0;
+  padding-top: var(--spacing);
 }
-.modal .post{
-    padding: 0 0 var(--spacing) 0;
+.modal .post {
+  padding: 0 0 var(--spacing) 0;
 }
-.userImageContainer{
-    width: 50px;
-    height: 50px;
+.userImageContainer {
+  width: 50px;
+  height: 50px;
 }
-.userImageContainer img{
-    width:100%;
-    border-radius: 50%;
-    background-color: white;
-} 
-.textareaContainer{
-    flex: 1;
-    padding-left: var(--spacing);
+.userImageContainer img {
+  width: 100%;
+  border-radius: 50%;
+  background-color: white;
 }
-.textareaContainer textarea{
-    width: 100%;
-    border: none;
-    resize: none;
-    font-size: 19px;
+.textareaContainer {
+  flex: 1;
+  padding-left: var(--spacing);
+}
+.textareaContainer textarea {
+  width: 100%;
+  border: none;
+  resize: none;
+  font-size: 19px;
 }
 
 #submitPostButton {
-    background-image: var(--buttonHover);
-    color: white;
-    border: none;
-    border-radius: 40px;
-    padding: 7px 15px;
+  background-image: var(--buttonHover);
+  color: white;
+  border: none;
+  border-radius: 40px;
+  padding: 7px 15px;
 }
 
 #submitPostButton:disabled {
-    background: var(--buttonLight);
+  background: var(--buttonLight);
 }
-.post{
-    display: flex;
-    flex-direction: column;
-    padding: var(--spacing);
-    cursor: pointer;
-    border-bottom: 1px solid var(--grey);
-    flex-shrink: 0;
-} 
- .mainContentContainer{
-    flex: 1;
-    display: flex;
+.post {
+  display: flex;
+  flex-direction: column;
+  padding: var(--spacing);
+  cursor: pointer;
+  border-bottom: 1px solid var(--grey);
+  flex-shrink: 0;
 }
-.postContentContainer{
-    padding-left: var(--spacing);
-    display: flex;
-    flex-direction: column;
-    flex: 1;
+.mainContentContainer {
+  flex: 1;
+  display: flex;
 }
-.username, .date{
-    color: var(--greyText);
+.postContentContainer {
+  padding-left: var(--spacing);
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+.username,
+.date {
+  color: var(--greyText);
 }
 .verified {
-    width: 15px;
-    height: 15px;
+  width: 15px;
+  height: 15px;
 }
-.displayName{
-    font-weight: bold;
+.displayName {
+  font-weight: bold;
 }
-.postFooter{
-    display: flex;
-    align-items: center;  
+.postFooter {
+  display: flex;
+  align-items: center;
 }
-.postFooter .postButtonContainer{
-    flex: 1;
-    display: flex;
-
+.postFooter .postButtonContainer {
+  flex: 1;
+  display: flex;
 }
-.postFooter .postButtonContainer button{
+.postFooter .postButtonContainer button {
   padding: 2px 5px;
 }
-.header a:hover{
-    text-decoration: underline;
+.header a:hover {
+  text-decoration: underline;
 }
-.postButtonContainer button:hover{
-    background-color: #d4edff;
-    color: var(--blue);
-    border-radius: 50%;
+.postButtonContainer button:hover {
+  background-color: #d4edff;
+  color: var(--blue);
+  border-radius: 50%;
 }
 
-.postButtonContainer.red button.active{
+.postButtonContainer.red button.active {
   color: var(--red);
 }
 
-.postButtonContainer.red button:hover{
-    color: var(--red);
-    background-color: var(--redBackground);
-  }
-
-.postButtonContainer.green button.active{
-    color: var(--green);
-  }
-
-.postButtonContainer.green button:hover{
-    color: var(--green);
-    background-color: var(--greenBackground);
-  }
-
-.postActionContainer{
-    padding-left: 35px;
-    font-size: 13px;
-    color: var(--greyText);
-    margin-bottom: var(--spacing);
+.postButtonContainer.red button:hover {
+  color: var(--red);
+  background-color: var(--redBackground);
 }
-.replyFlag{
-    margin-bottom: 5px;
+
+.postButtonContainer.green button.active {
+  color: var(--green);
 }
-.replyFlag a{
-    color: var(--blue);
+
+.postButtonContainer.green button:hover {
+  color: var(--green);
+  background-color: var(--greenBackground);
+}
+
+.postActionContainer {
+  padding-left: 35px;
+  font-size: 13px;
+  color: var(--greyText);
+  margin-bottom: var(--spacing);
+}
+.replyFlag {
+  margin-bottom: 5px;
+}
+.replyFlag a {
+  color: var(--blue);
 }
 .post.largeFont .postBody,
-.post.largeFont .postFooter{
-    font-size: 23px;
+.post.largeFont .postFooter {
+  font-size: 23px;
+}
+
+.postContentContainer .header {
+  display: flex;
+}
+
+.postContentContainer .header .date {
+  flex: 1;
+}
+
+.errorMessage {
+  padding: var(--spacing);
+}
+
+.coverPhotoContainer {
+  height: 180px;
+  background-color: var(--blue);
+  position: relative;
+}
+
+.profileHeaderContainer .userImageContainer {
+  width: 132px;
+  height: 132px;
+  margin-left: var(--spacing);
+  position: absolute;
+  bottom: -66px;
+}
+
+.profileHeaderContainer .userImageContainer img {
+  border: 4px solid #fff;
+}
+
+.profileHeaderContainer .profileButtonsContainer {
+  text-align: right;
+  padding: var(--spacing);
+  min-height: 66px;
+}
+
+.profileButton,
+.followButton {
+  border: 1px solid var(--blue);
+  color: var(--blue);
+  font-weight: bold;
+  padding: 5px 15px;
+  border-radius: 60px;
+  display: inline-block;
+  margin-left: var(--spacing);
+}
+
+.profileButton:hover,
+.followButton:hover {
+  background-color: var(--blueBackground);
+}
+
+.followButton.following {
+  background-color: var(--blue);
+  color: #fff;
+}
+
+.profileHeaderContainer .userDetailsContainer {
+  display: flex;
+  flex-direction: column;
+  padding: 0 var(--spacing);
+}
+
+.followersContainer .value {
+  font-weight: bold;
+  margin-right: 5px;
+}
+
+.followersContainer span:not(.value) {
+  color: var(--greyText);
+}
+
+.followersContainer a {
+  margin-right: 15px;
+}
+
+.followersContainer a:hover {
+  border-bottom: 1px solid #000;
+}
+
+.tabsContainer {
+  display: flex;
+  border-bottom: 1px solid var(--lightGrey);
+  flex-shrink: 0;
+}
+
+.tab {
+  flex: 1;
+  height: 52px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--greyText);
+  font-weight: bold;
+}
+
+.tab.active {
+  color: var(--blue);
+  border-bottom: 2px solid var(--blue);
+}
+
+.tab:hover {
+  color: var(--blue);
+  background-color: var(--blueBackground);
 }
