--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,6 +55,10 @@ nav a:hover {
   border-radius: 50%;
 }
 
+.wrapper > .row {
+  margin: 0;
+}
+
 button {
   background-color: transparent;
   border: none;
@@ -317,4 +321,34 @@ button span {
 .tab:hover {
   color: var(--blue);
   background-color: var(--blueBackground);
+}
+.noResults {
+  padding: var(--spacing);
+}
+
+.resultsContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+.resultsContainer .user {
+  padding: var(--spacing);
+  display: flex;
+  border-bottom: 1px solid var(--lightGrey);
+}
+
+.user .userDetailsContainer {
+  flex: 1;
+  padding: 0 var(--spacing);
+}
+
+.profilePictureButton {
+  position: absolute;
+  font-size: 50px;
+  color: rgba(0, 0, 0, 0.6);
+  display: none;
+}
+
+.userImageContainer:hover .profilePictureButton {
+  display: block;
 }
