--- a/public/css/main.css
+++ b/public/css/main.css
@@ -241,6 +241,9 @@ button span {
   margin-left: var(--spacing);
   position: absolute;
   bottom: -66px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .profileHeaderContainer .userImageContainer img {
@@ -351,4 +354,10 @@ button span {
 
 .userImageContainer:hover .profilePictureButton {
   display: block;
+}
+
+#imagePreview {
+  width: 100%;
+  display: block;
+  max-width: 100%;
 }
