--- a/public/css/main.css
+++ b/public/css/main.css
@@ -229,7 +229,7 @@ button span {
   padding: var(--spacing);
 }
 
-.coverPhotoContainer {
+.coverPhotoSection {
   height: 180px;
   background-color: var(--blue);
   position: relative;
@@ -345,18 +345,34 @@ button span {
   padding: 0 var(--spacing);
 }
 
-.profilePictureButton {
+.profilePictureButton,
+.coverPhotoButton {
   position: absolute;
   font-size: 50px;
   color: rgba(0, 0, 0, 0.6);
   display: none;
 }
 
-.userImageContainer:hover .profilePictureButton {
+.userImageContainer:hover .profilePictureButton,
+.coverPhotoSection:hover .coverPhotoButton {
   display: block;
 }
 
-#imagePreview {
+.coverPhotoContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.coverPhotoContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#imagePreview,
+#coverPreview {
   width: 100%;
   display: block;
   max-width: 100%;
