--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,6 +4,7 @@
   --buttonLight: linear-gradient(90deg, #94aaf1, #e7c1e7);
   --grey: rgba(230, 236, 240);
   --greyText: rgb(101, 119, 134);
+  --lightGrey: rgb(230, 236, 240);
   --greyButtonText: rgba(0, 0, 0, 0.34);
   --spacing: 15px;
   --red: rgb(226, 34, 94);
@@ -389,4 +390,25 @@ button span {
 
 .pinnedPostContainer {
   border-bottom: 10px solid rgb(230, 236, 240);
+}
+.searchBarContainer {
+  position: relative;
+  color: var(--greyText);
+  padding: 10px var(--spacing);
+}
+
+.searchBarContainer i {
+  position: absolute;
+  top: 20px;
+  left: 28px;
+}
+
+.searchBarContainer #searchBox {
+  height: 36px;
+  width: 100%;
+  padding: 5px 15px 5px 40px;
+  border-radius: 50px;
+  background-color: var(--lightGrey);
+  border: none;
+  color: var(--greyText);
 }
