--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,6 +21,10 @@ body {
   font-weight: 300;
 }
 
+ul {
+  margin: 0;
+}
+
 * {
   outline: none !important;
 }
@@ -642,14 +646,24 @@ button span {
   display: flex;
   align-items: flex-end;
   flex-shrink: 0;
-  -webkit-flex: 0;
 }
 
+.typingDots img,
 .chatMessages .message .messageBody {
   background-color: #f1f0f0;
   padding: 6px 12px;
   border-radius: 18px;
   font-size: 14px;
+}
+
+.typingDots img {
+  height: 35px;
+}
+
+.typingDots {
+  padding: var(--spacing);
+  padding-bottom: 0;
+  display: none;
 }
 
 .chatMessages .message .messageContainer {
