--- a/public/css/main.css
+++ b/public/css/main.css
@@ -754,3 +754,11 @@ button span {
   width: 50%;
   max-width: 75px;
 }
+
+.resultListItem.active {
+  background-color: var(--blueBackground);
+}
+
+.resultListItem.notification * {
+  pointer-events: none;
+}
