--- a/public/css/main.css
+++ b/public/css/main.css
@@ -60,6 +60,8 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #212529;
+  position: relative;
 }
 
 nav a.logo {
@@ -761,4 +763,26 @@ button span {
 
 .resultListItem.notification * {
   pointer-events: none;
+}
+
+#notificationBadge,
+#messagesBadge {
+  background-color: var(--red);
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: white;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+}
+
+#notificationBadge.active,
+#messagesBadge.active {
+  visibility: visible;
 }
