--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,6 @@
 :root {
   --blue: #4568dc;
+  --blueBackground: rgba(212, 237, 255, 0.6);
   --buttonHover: linear-gradient(90deg, #4568dc, #b06ab3);
   --buttonLight: linear-gradient(90deg, #94aaf1, #e7c1e7);
   --grey: rgba(230, 236, 240);
@@ -45,7 +46,6 @@ h1 {
 }
 
 nav {
-  margin-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
@@ -110,36 +110,44 @@ button span {
   border-bottom: 1px solid var(--grey);
   flex-shrink: 0;
 }
+
 .titleContainer h1 {
   flex: 1;
 }
+
 .postFormContainer {
   display: flex;
   padding: var(--spacing);
   border-bottom: 10px solid var(--grey);
   flex-shrink: 0;
 }
+
 .modal .postFormContainer {
   border: none;
   padding: 0;
   padding-top: var(--spacing);
 }
+
 .modal .post {
   padding: 0 0 var(--spacing) 0;
 }
+
 .userImageContainer {
   width: 50px;
   height: 50px;
 }
+
 .userImageContainer img {
   width: 100%;
   border-radius: 50%;
   background-color: white;
 }
+
 .textareaContainer {
   flex: 1;
   padding-left: var(--spacing);
 }
+
 .textareaContainer textarea {
   width: 100%;
   border: none;
@@ -158,6 +166,7 @@ button span {
 #submitPostButton:disabled {
   background: var(--buttonLight);
 }
+
 .post {
   display: flex;
   flex-direction: column;
@@ -166,42 +175,57 @@ button span {
   border-bottom: 1px solid var(--grey);
   flex-shrink: 0;
 }
+
 .mainContentContainer {
   flex: 1;
   display: flex;
   overflow-y: hidden;
 }
+
 .postContentContainer {
   padding-left: var(--spacing);
   display: flex;
   flex-direction: column;
   flex: 1;
 }
+
 .username,
 .date {
   color: var(--greyText);
 }
+
 .verified {
   width: 15px;
   height: 15px;
 }
+
 .displayName {
   font-weight: bold;
 }
+
 .postFooter {
   display: flex;
   align-items: center;
 }
+
 .postFooter .postButtonContainer {
   flex: 1;
   display: flex;
 }
+
 .postFooter .postButtonContainer button {
   padding: 2px 5px;
 }
+
 .header a:hover {
   text-decoration: underline;
 }
+
+.header a,
+.header span {
+  padding-right: 5px;
+}
+
 .postButtonContainer button:hover {
   background-color: #d4edff;
   color: var(--blue);
@@ -232,12 +256,15 @@ button span {
   color: var(--greyText);
   margin-bottom: var(--spacing);
 }
+
 .replyFlag {
   margin-bottom: 5px;
 }
+
 .replyFlag a {
   color: var(--blue);
 }
+
 .post.largeFont .postBody,
 .post.largeFont .postFooter {
   font-size: 23px;
@@ -351,6 +378,7 @@ button span {
   color: var(--blue);
   background-color: var(--blueBackground);
 }
+
 .noResults {
   padding: var(--spacing);
 }
