--- a/views/home.pug
+++ b/views/home.pug
@@ -1,9 +1,10 @@
 extends layouts/main-layout.pug
 
-block content 
+block content    
     +createPostForm(userLoggedIn)
     .postsContainer
 
-    +createReplyModal(userLoggedIn)
-block scripts 
-    script(src="/js/home.js") 
+    +createPostModals(userLoggedIn)
+
+block scripts
+    script(src="/js/home.js")
