--- a/views/postPage.pug
+++ b/views/postPage.pug
@@ -1,10 +1,12 @@
 extends layouts/main-layout.pug
 
-block content
+block content    
     script.
         var postId = '!{postId}'
+
     .postsContainer
 
-    +createReplyModal(userLoggedIn)
+    +createPostModals(userLoggedIn)
+
 block scripts
     script(src="/js/postPage.js")
